------------------------------------------------------
Release 0 | Beta 2 | Development 1 | Experimental 2

* Added GUIImage
* Added support for components within components
* Added GUIComponent positioning system using
  GUIPosition
  
* Fixed bug: Inactive GUIComponents didn't render
             properly unless the inactive colour/
             image had been set

------------------------------------------------------
Release 0 | Beta 2 | Development 1 | Experimental 1

* Added GUIBorder
* Added GUIPosition

* Fixed bug: GUIComponents - Mouse could click
             components when dragging the mouse
             over them
* Fixed spelling: Center should have been Centre in
                  GUIComponent

------------------------------------------------------
Release 0 | Beta 2 | Development 1 | Experimental 0

* Added Camera2D
* Added GUIRadioCheckBox
* Added GUILabel
* Added the variable 'text' in GUICheckBox
* Added rotation and scaling when linking Objects
  (2D + 3D)

* Increased performance (Hopefully): Linked Objects

* Fixed bug: GUIDropDownMenu and GUIDropDownList
		 	 stayed open when the mouse clicked
		 	 outside of the menu/list
* Fixed bug: Linked object scaling was wrong
* Fixed bug: GUI components didn't fully work with
 			 object linking

------------------------------------------------------
Release 0 | Beta 2 | Development 0 | Experimental 3

* Added Camera2D

------------------------------------------------------
Release 0 | Beta 2 | Development 0 | Experimental 2

* Added GUIGroup
* Added GUIRadioCheckBox
* Added GUILabel
* Added the variable 'text' in GUICheckBox

* Fixed bug: Linked object scaling was wrong
* Fixed bug: GUI components didn't fully work with
 			 object linking
 
------------------------------------------------------
Release 0 | Beta 2 | Development 0 | Experimental 1

* Added rotation and scaling when linking Objects
  (2D + 3D)

* Increased performance (Hopefully): Linked Objects
