@@ -121,6 +121,9 @@ public class GUIDropDownMenu extends GUIComponent implements GUIComponentListene
 	/* The method called when the mouse moves */
 	public void onMouseMoved(MouseMotionEvent e) { }
 	
+	/* The method called when the mouse is dragged */
+	public void onMouseDragged(MouseMotionEvent e) { }
+	
 	/* The method called when a key on the keyboard is pressed */
 	public void onKeyPressed(KeyboardEvent e) { }
 	
